<resources>
    <string name="app_name" translatable="false">PhaseDiagram</string>

    <!-- fragment view -->
    <string name="second_component_textView">Second component</string>
    <string name="first_component_textView">First component</string>
    <string name="melting_temp_textView">Melting temperature T, K</string>
    <string name="temperature_editText">Temperature</string>
    <string name="melting_entropy_textView">Melting entropy S, J/mol*K</string>
    <string name="entropy_editText">Entropy</string>
    <string name="alpha_desc_textView">Parameters of intermolecular interaction</string>
    <string name="alpha_l_editText" translatable="false">Alpha L</string>
    <string name="alpha_s_editText" translatable="false">Alpha S</string>
    <string name="build_button_text">Build</string>

    <!-- menu -->
    <string name="menu_solution_type">Solution Type</string>
    <string name="menu_ideal">Ideal</string>
    <string name="menu_regular">Regular</string>
    <string name="menu_subregular">Subregular</string>
    <string name="menu_sample">Sample</string>
    <string name="menu_save">Save diagram</string>
    <string name="diagram_y" translatable="false">T, K</string>
    <string name="diagram_x" translatable="false">%</string>

    <!-- fragment -->
    <string name="diagram_liquid" translatable="false">Liquid</string>
    <string name="diagram_solid" translatable="false">Solid</string>
    <string name="diagram_fragment_title" translatable="false">Diagram</string>
    <string name="saved_image_name" translatable="false">Diagram_image</string>
    <string name="saved_image_desc" translatable="false">"Diagram image build in PhaseDiagram app"</string>

    <!-- diaglogs -->
    <string name="try_again">Please try again.</string>
    <string name="successful_image_save">Image saved in gallery</string>
    <string name="failed_image_save">Saving FAILED!</string>
    <string name="internal_error">Internal Error</string>
    <string name="null_message">Null message</string>
    <string name="exception_title">Exception</string>
    <string name="permissions_not_grant">Without storage permission can\'t save diagram!</string>
    <string name="long_time_calculation">Too much time spent on calculations. Try again.</string>
    <string name="long_time_save">Too much time spent on save. Try again.</string>

    <string name="empty_first_temp">Please enter temperature for first component</string>
    <string name="small_first_temp">Temperature for first component must be bigger then 0</string>
    <string name="empty_second_temp">Please enter temperature for second component</string>
    <string name="small_second_temp">Temperature for second component must be bigger then 0</string>
    <string name="empty_first_entrop">Please enter entropy for first component</string>
    <string name="small_first_entrop">Entropy for first component must be bigger then 0</string>
    <string name="empty_second_entrop">Please enter entropy for second component</string>
    <string name="small_second_entrop">Entropy for second component must be bigger then 0</string>
    <string name="empty_alpha_l">Please enter alphaL</string>
    <string name="empty_alpha_s">Please enter alphaS</string>
    <string name="empty_first_alpha_l">Please enter alphaL for first component</string>
    <string name="empty_first_alpha_s">Please enter alphaS for first component</string>
    <string name="empty_second_alpha_l">Please enter alphaL for second component</string>
    <string name="empty_second_alpha_s">Please enter alphaS for second component</string>
    <string name="autor_label" translatable="false">Andrew Liashuk 2019</string>

    <!-- Time indicating 1 minute before now -->
    <string name="date_minute" translatable="false">a minute ago</string>
    <!-- Time indicating several minutes before now -->
    <string name="date_minutes" translatable="false">%1$d minutes ago</string>
    <!-- Time indicating yesterday -->
    <string name="date_yesterday" translatable="false">%1$s yesterday</string>
    <!-- Time indicating one day -->
    <string name="date_day" translatable="false">1 day</string>
    <!-- Time indicating several days -->
    <string name="date_days" translatable="false">%1$d days</string>

</resources>
