<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andrew.liashuk.phasediagram.MainActivity">

    <item
        android:id="@+id/menu_type"
        android:orderInCategory="1"
        android:title="@string/menu_solution_type"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_ideal"
                    android:title="@string/menu_ideal" />
                <item
                    android:id="@+id/menu_regular"
                    android:title="@string/menu_regular" />
                <item
                    android:id="@+id/menu_subregular"
                    android:title="@string/menu_subregular" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_sample"
        android:orderInCategory="2"
        android:title="@string/menu_sample"
        app:showAsAction="never" />
</menu>
